<resources>
    <string name="app_name">Graphes</string>
    <string name="createNode">Create node</string>
    <string name="createArc">Create arc</string>
    <string name="createANode">Create a node</string>
    <string name="createAArc">Create an arc</string>
    <string name="cancel">Cancel</string>
    <string name="reinit">Reset</string>
    <string name="normMode">Add &amp; edit node</string>
    <string name="addArc">Add &amp; edit arcs</string>
    <string name="moveNA">Move Nodes &amp; Arcs</string>
    <string name="save">Save</string>
    <string name="open">Open graph</string>
    <string name="send">Share</string>
    <string name="clearN">Clear nodes</string>
    <string name="clearA">Clear arcs</string>
    <string name="color">Color</string>
    <string name="modifSize">Size</string>
    <string name="modifSizeE">Changing the Label Size</string>
    <string name="naming">Rename</string>
    <string name="deleteN">Delete this node</string>
    <string name="deleteA">Delete this arc</string>
    <string name="optsNode">Node options</string>
    <string name="optsArc">Arc options</string>
    <string name="clearAllMess">Nodes &amp; Arcs deleted</string>
    <string name="clearAllArcsMess">Arcs deleted</string>
    <string name="saveMess">Backup performed</string>
    <string name="normModeMess">Adding &amp; edit nodes activated</string>
    <string name="addArcMess">Adding &amp; edit arcs activated</string>
    <string name="titleMsgBA">Arc name</string>
    <string name="changPosMess">Position change enabled</string>
    <string name="modifiy">Modifier</string>
    <string name="modifiySize">Change node size</string>
    <string name="modifiySizeA">Change arc Thickness</string>
    <string name="modifiySizeL">Change Label size</string>
    <string name="modifiyTxt">Change text node</string>
    <string name="modifiyTxtA">Change text arc</string>
    <string name="clearAllQ">Do you really want to erase everything ?</string>
    <string name="clearAllA">Do you really want to erase all arcs ?</string>
    <string name="titleClearN">Deleting nodes</string>
    <string name="titleClearA">Deleting arcs</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="resetAllQ">Do you really want to reset ?</string>
    <string name="namefile">File name</string>
    <string name="fileexist">File exit !</string>
    <string name="titleFile">File choice</string>
    <string name="problemFile">File failed</string>
    <string name="share">Share image using</string>
    <string name="modespe">Special</string>
    <string name="draughtsset">Checkers game</string>
</resources>
