<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/reinit"
        android:title="@string/reinit" />
    <item android:id="@+id/supNode"
        android:title="@string/clearN" />
    <item android:id="@+id/supArc"
        android:title="@string/clearA" />
    <group
        android:id="@+id/groupModify"
        android:checkableBehavior="single">
        <item
            android:id="@+id/normalMode"
            android:checked="true"
            android:title="@string/normMode" />
        <item
            android:id="@+id/addArc"
            android:title="@string/addArc" />
        <item
            android:id="@+id/moveAN"
            android:title="@string/moveNA" />
    </group>
    <item android:id="@+id/save"
        android:title="@string/save" />
    <item android:id="@+id/open"
        android:title="@string/open" />
    <item android:id="@+id/send"
        android:title="@string/send" />
    <item android:id="@+id/special"
        android:title="@string/modespe"/>
</menu>
